--- a/index.html
+++ b/index.html
@@ -239,6 +239,13 @@
                 createNoteElement(note.text, note.color, index);
             });
         }
+        <div class="bg-gradient-to-r from-violet-900/40 to-blue-900/40 p-6 rounded-3xl border border-violet-500/30 mb-12 flex flex-col md:flex-row items-center justify-between gap-6">
+    <div>
+        <h3 class="text-xl font-bold text-violet-300">💡 Today's Challenge</h3>
+        <p id="dailyTerm" class="text-slate-200 mt-2 font-medium">"Automation: The use of technology to perform tasks with reduced human assistance."</p>
+    </div>
+    <button onclick="getNewTerm()" class="bg-violet-600 hover:bg-violet-700 px-6 py-2 rounded-xl text-sm font-bold transition shadow-lg shadow-violet-500/20">Next Term</button>
+</div>
 
         // Note ka HTML element banana
         function createNoteElement(text, colorClass, index) {
