Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <header class="max-w-6xl mx-auto mb-20">
         <h1 class="text-5xl font-extrabold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-blue-400 to-emerald-400">DevOps Academy.</h1>
-        <p class="text-slate-400 text-lg">Mariya, yahan tumhare detailed commands aur progress boxes hain. Easy to learn, easy to master!</p>
+        <p class="text-slate-400 text-lg">Mariya's</p>
     </header>
 
     <main class="max-w-6xl mx-auto space-y-24">
@@ -201,4 +201,5 @@
         window.onload = () => { renderCommands(); renderRoadmap(); renderNotes(); };
     </script>
 </body>
+
 </html>
